OO-9283: load and filters various positions list